Fixed footer spacing.

--- a/createquiz/createquiz.css
+++ b/createquiz/createquiz.css
@@ -54,6 +54,7 @@ footer {
     height: 75px;
     text-align: center;
     padding: 3px;
+    margin-top: 100px;
     background-color: #E5E5E5;
     color: #FFFFFF;
 }
